<resources>
    <string name="app_name">Homework 3-3-1</string>
    <string name="mc">mc</string>
    <string name="mr">mr</string>
    <string name="mplus">m+</string>
    <string name="mminus">m-</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multy">*</string>
    <string name="del">/</string>
    <string name="c">c</string>
    <string name="sqrt">sqrt</string>
    <string name="sign">+/-</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="button">but</string>
    <string name="_4">4</string>
    <string name="_1_x">1/x</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="percent">%</string>

</resources>
